[package]
name = "go-flash-module"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GOcontroll/flash-module"
readme = "README.md"
homepage = "https://gocontroll.com"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
spidev = "0.6.0"
