[package]
name = "go-modules"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GOcontroll/go-modules"
readme = "README.md"
homepage = "https://gocontroll.com"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
spidev = "0.6"
inquire = "0.6"
indicatif = "0.17"
ctrlc = "3.4"
tokio = { version = "1.33.0", features = ["rt", "macros", "time", "rt-multi-thread"]}
tokio-gpiod = { version = "0.2.3", default-features = true }